<resources>

    // Main Activity Strings
    <string name="app_name">MySensorApp_Lab4_257160</string>
    <string name="sensors_list">Sensors List</string>
    <string name="sensor_game">Sensor Game</string>
    <string name="gps_app_sensor">GPS App Sensor</string>
    <string name="welcome_to_the_best_sensor_app">Welcome to the best Sensor App!</string>

    <string name="menu">Menu</string>

    // Sensor List Activity strings
    <string name="welcome_to_the_sensors_list"> All your mobile sensors available \n are below ! Enjoy !</string>

    // Sensor Game Activity strings
    <string name="welcome_to_this_sensor_ball_game">Welcome to this Sensor Ball Game !</string>

    // Sensor GPS Activity strings
    <string name="welcome_to_this_gps_sensor_app">Welcome to this GPS Sensor App</string>
    <string name="content_of_the_sensor">Content of the sensor</string>
    <string name="init_location">Initialise your location</string>
    <string name="your_coordinates">Your initial coordinates :</string>
    <string name="permission_issue">Issue with permission</string>
    <string name="start_to_play">Start to play</string>
    <string name="viewball">ViewBall</string>
    <string name="view_ball">View Ball</string>
    <string name="please_lock_your_phone_rotation_before_starting_the_game">(Please lock your phone rotation before starting the game)</string>
    <string name="this_game_use_accelerometer_sensor_n_if_the_ball_touch_an_edge_n_you_loose">This game use accelerometer sensor. \n If the ball touch an edge : \n You loose !</string>
    <string name="launch_process">Launch_Process</string>
    <string name="select_the_maximal_length">Select the maximal length :</string>
    <string name="thanks_to_your_initial_coordinates_this_app_will_help_you_to_calculate_in_real_time_the_max_distance_you_can_make_and_inform_you_when_you_leave_the_authorized_area">Thanks to your initial coordinates, this app will help you to calculate in real time the max. distance you can make and inform you when you leave the authorized area. Please Activate Localisation (GPS) before initialise.</string>
    <string name="percentage_of_advancement">Percentage of advancement :</string>
    <string name="we_are_calculating_your_movement">We are calculating your movement</string>
    <string name="calculate_current_position">Calculate current position</string>
    <string name="new_coordinates">New coordinates</string>

</resources>
