<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/welcome_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_this_gps_sensor_app"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125"
        tools:layout_editor_absoluteY="84dp" />

    <TextView
        android:id="@+id/coordinates"
        android:layout_width="281dp"
        android:layout_height="32dp"
        android:layout_marginTop="30dp"
        android:text="@string/your_coordinates"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_location" />

    <TextView
        android:id="@+id/length_view"
        android:layout_width="281dp"
        android:layout_height="32dp"
        android:layout_marginTop="70dp"
        android:text="@string/select_the_maximal_length"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordinates" />

    <Button
        android:id="@+id/menu_button"
        android:layout_width="103dp"
        android:layout_height="40dp"
        android:text="@string/menu"
        app:layout_constraintBottom_toTopOf="@+id/welcome_gps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541" />

    <Button
        android:id="@+id/start_location"
        android:layout_width="161dp"
        android:layout_height="58dp"
        android:layout_marginTop="100dp"
        android:text="@string/init_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_gps" />

    <SeekBar
        android:id="@+id/select_length"
        android:layout_width="251dp"
        android:layout_height="32dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/length_view" />

    <Button
        android:id="@+id/launch_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_process"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_length"
        app:layout_constraintVertical_bias="0.356" />


</androidx.constraintlayout.widget.ConstraintLayout>